Css updated and align item

--- a/header.html
+++ b/header.html
@@ -1,4 +1,5 @@
 <!-- Header Section -->
+ <!-- Header.html -->
     <header id="home-section">
         <div class="top-bar">
             <p>QUICK BUY! Get up to 25% off on All Stones</p>
