--- a/hero.html
+++ b/hero.html
@@ -1,4 +1,5 @@
 <!-- Hero Section -->
+ <!-- hero.html -->
 <section class="hero" id="hero-section">
   <div class="hero-content">
     <img class="hero-img" src = "Assets/images/Frame.png" alt="Hands and Moon Illustration">
