--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
+        <!-- hero Section -->
         <section id="hero-section"></section>
 
         <!-- Categories Section -->
