--- a/productDetail.html
+++ b/productDetail.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <!-- Header Section -->
+    <!-- header Section -->
     <header id="home-section"></header>
 
     <div class="main-container">
