--- a/category.html
+++ b/category.html
@@ -1,4 +1,5 @@
   <!-- Categories Section -->
+   <!-- Categories section -->
   <section class="categories" id="categories-section">
     <h2>Shop From Our Top Categories</h2>
     <div class="category-items">
