--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-     <!-- Header Section -->
+     <!-- header Section -->
      <header id="home-section"></header>
      
     <div class="products-page-container">
